# ring-buffer

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  ring_buf.c  ring_buf.h  ring_buf_private.h
test/: CMakeLists.txt  main.cpp  ring_buf.cpp  ring_buf_no_setup.cpp
test/mock/: mock_cfg_functions.cpp  mock_cfg_functions.h
